@@ -8,6 +8,7 @@ import org.g9project4.publicData.tourvisit.repositories.SigunguTableRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
+import java.net.URI;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -19,7 +20,7 @@ public class SigunguTableStatisticService {
     private final RestTemplate restTemplate;
     private final SigunguTableRepository sigunguTableRepository;
 
-    private String sKey ="7rVGv4M2LZhWVFhu97TYGa8Lltf6eOFPG99BKHny11wiv2TWbUle1fP3Foos%2BQcjBgTlHVDYcoG8RwfuspzfxA";
+    private String sKey = "N8yeFJlK12h1MoldGswxyuc6R%2BmgDa7RcdKioykhYnC0eWRCYVumURmL0E10CgJ%2BWri%2B2Ln3xcXOs5pu%2BZ3sgA%3D%3D";
     //    @Scheduled(fixedRate = 1L, timeUnit = TimeUnit.DAYS)
 
     /**
@@ -28,29 +29,25 @@ public class SigunguTableStatisticService {
      * @return 저장된 SigunguTable 객체 리스트
      */
     public List<SigunguTable> update() {
-        int totalPages = 100;  // totalPages 값을 적절히 할당
+        int totalPages = 25 ;  // totalPages 값을 적절히 할당
 
         List<SigunguTable> sigunguTables = new ArrayList<>();
 
         for (int i = 1; i <= totalPages; i++) {
-            String url = String.format(
-                    "https://api.odcloud.kr/api/15067699/v1/uddi:0c8ed5b5-30ff-4495-9b0d-d89f94d7308f?page=%d&perPage=10&returnType=JSON&serviceKey=%s",
-                    i,
-                    sKey
-            );
+            String url = String.format("https://api.odcloud.kr/api/15067699/v1/uddi:0c8ed5b5-30ff-4495-9b0d-d89f94d7308f?page=%d&perPage=10&returnType=JSON&serviceKey=%s", i, sKey);
 
-          ApiResult result = restTemplate.getForObject(url, ApiResult.class);
+            ApiResult result = restTemplate.getForObject(URI.create(url), ApiResult.class);
             if (result != null && result.getData() != null) {
                 List<SigunguTable> tables = result.getData().stream()
                         .map(this::convertToSigunguTable)
                         .filter(table -> table.getSigunguCode2() != null)  // sigunguCode가 null이 아닌지 확인
-                        .collect(Collectors.toList());
+                        .toList();
 
                 sigunguTables.addAll(tables);
             }
         }
 
-    //    Save all sigunguTables to the database and return the saved list
+        //    Save all sigunguTables to the database and return the saved list
         return sigunguTableRepository.saveAllAndFlush(sigunguTables);
     }
 
